--- a/client/src/Components/Dashboards/UserDashboard.css
+++ b/client/src/Components/Dashboards/UserDashboard.css
@@ -257,6 +257,7 @@
   margin-top: 10px;
 }
 
+
 .loading-text,
 .no-results {
   font-size: 0.9rem;
@@ -672,4 +673,19 @@
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.view-button {
+  padding: 8px 14px;
+  background-color: var(--success-color); 
+  color: white;
+  border: none;
+  border-radius: 6px;
+  font-weight: 500;
+  cursor: pointer;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+}
+
+.view-button:hover {
+  background-color: #059669;
 }
