--- a/client/src/Components/Dashboards/AdminDashboard.css
+++ b/client/src/Components/Dashboards/AdminDashboard.css
@@ -181,11 +181,16 @@
 
 @media (max-width: 480px){
   .admin-dashboard {
-    margin-left: 50px;
-    padding: 20px;
+    margin-left: 40px;
+    margin-right: 10px;
   } 
+  .cards-container {
+    flex-direction: column;
+    align-items:flex-start;
+    margin-left: 10px;
+  }
   .card {
-    width: 70%;
+    width: 60%;
     min-width: unset;
   }
   .chart-container,
