--- a/client/src/Components/Dashboards/AdminDashboard.css
+++ b/client/src/Components/Dashboards/AdminDashboard.css
@@ -182,19 +182,20 @@
 @media (max-width: 480px){
   .admin-dashboard {
     margin-left: 40px;
-    margin-right: 10px;
   } 
   .cards-container {
     flex-direction: column;
     align-items:flex-start;
+    margin-left: 10px;
   }
   .card {
-    width: 60%;
+    width: 80%;
     min-width: unset;
   }
   .chart-container,
   .barchart {
-    width: 95%;
-    max-width: 95%;
+    width: 90%;
+    margin-right: 15px;
+    max-width: 90%;
   }
 }
