--- a/client/src/Components/Dashboards/DataTable.css
+++ b/client/src/Components/Dashboards/DataTable.css
@@ -121,7 +121,6 @@ th, td {
   border-bottom: 1px solid #ddd;
 }
 
-/* Adjust column widths by nth-child */
 th:nth-child(1),
 td:nth-child(1) {
   width: 200px;
@@ -132,7 +131,7 @@ td:nth-child(2) {
   width: 300px;
 }
 
-/* Adjust action column */
+
 th:last-child,
 td:last-child {
   width: 250px;
@@ -215,7 +214,7 @@ h3 {
 .instructions-list,
 .shopping-list-list{
   li{
-  font-size: 22px;
+  font-size: 20px;
   font-weight: 450;
   font-family: '';
 }
@@ -277,52 +276,50 @@ h3 {
   cursor: pointer;
 }
 
-
-
-/*shopping list*/
-.shopping-list-container {
-  margin-top: 10px;
-  padding: 15px;
-  background: var(--light-grey-color-2); 
-  border-radius: 10px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  text-align: left;
+.modal-content input, 
+.modal-content textarea
+.modal-content select {
+  width: 100%;
+  padding: 10px;
+  margin: 8px 0;
+  border-radius: 8px;
+  border: 1px solid #ccc;
 }
 
-.shopping-list-container h3 {
-  margin-bottom: 10px;
-  font-size: 1.3rem;
-  color: var(--primary-color);
-  text-align: center;
-}
-
-.shopping-list-container ul {
-  list-style: none;
+.shopping-list-list {
+  margin-top: 24px;
   padding: 0;
+  list-style: none;
+  background-color: #fff;
+  border-radius: 12px;
+  border: 1px solid #ddd;
+  max-width: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.06);
 }
 
-.shopping-list-container li {
-  background: #c49d85; 
-  color: var(--black-color);
-  padding: 5px 8px;
-  margin: 5px 0;
-  border-radius: 5px;
+.shopping-list-list li {
+  padding: 14px 20px;
   display: flex;
+  justify-content: space-between;
   align-items: center;
+  border-bottom: 1px solid #eee;
+  font-size: 20px;
+  color: #333;
 }
 
-.shopping-list-container li::before {
-  content: "✔";
-  margin-right: 10px;
-  font-size: 1.2rem;
-  color: var(--primary-color);
+.shopping-list-list li:last-child {
+  border-bottom: none;
 }
 
-.shopping-list-container li:hover {
-  cursor: pointer;
-  transform: scale(1.02);
-  transition: all 0.3s ease-in-out;
+.shopping-list-list li span {
+  font-size: 20px;
+  color: #888;
 }
+
+
+
 
 @media screen and (max-width: 768px) {
   .recipe-details-container {
@@ -353,7 +350,7 @@ h3 {
       padding: 6px 12px;
   }
 
-  .shopping-list-container {
+  /* .shopping-list-container {
       padding: 10px;
   }
 
@@ -364,7 +361,7 @@ h3 {
   .shopping-list-container li {
       font-size: 0.85rem;
       padding: 6px;
-  }
+  } */
 }
 
 @media screen and (max-width: 480px) {
@@ -387,14 +384,14 @@ h3 {
       padding: 5px 10px;
   }
 
-  .shopping-list-container h3 {
+  /* .shopping-list-container h3 {
       font-size: 1rem;
   }
 
   .shopping-list-container li {
       font-size: 0.8rem;
       padding: 5px;
-  }
+  } */
 }
 .modal-overlay-container{
   background: rgba(0, 0, 0, 0.6);
